tests/expectations/compiler/statements/duplicate_variable.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372009]: variable `x` shadowed by
    --> compiler-test:6:12
     |
   6 |       \tlet x: bool = true;
     |            ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
